# tweak-cv

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: security-code-reviewer.md
.claude/hooks/: protect-files.sh
.github/workflows/: claude-code-review.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: PRD.md  TRD.md  env-setup.md  ngrok-setup.md  personalize.md  slack-setup.md
evals/: dataset.json  run_evals.py  sync_langfuse.py
evals/cache/: eval-career-switcher.json  eval-date-preservation.json  eval-hallucination-guard.json  eval-keyword-density.json  eval-partial-match.json  eval-skills-hallucination-guard.json  eval-skills-specificity.json  eval-strong-match.json  eval-summary-rewrite.json
specs/002-resume-tailoring-cli/: data-model.md  plan.md  research.md  spec.md
specs/resume-tailoring-cli/: data-model.md  plan.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_db.py  test_evals.py  test_graph.py  test_harness_loader.py  test_main.py  test_schemas.py  test_slack_handler.py
tests/nodes/: test_analyze.py  test_edit.py  test_finalize.py  (+2 more)
tweakcv/: base_resume.json  clients.py  db.py  errors.py  graph.py  harness.json  harness_loader.py  personal.json  pull_evals.py  pull_prompts.py  runner.py  schemas.py  seed_evals.py  seed_prompts.py  settings.py  slack_handler.py  state.py
(+11 files in other folders)
